# rerename

./: .gitignore  Cargo.toml  README.md
src/: comparable.rs  converter.rs  error.rs  file_names.rs  lib.rs  main.rs  referencer.rs  transformers.rs
src/format/: formatter.rs  mod.rs  parser.rs  token.rs  value.rs  variables.rs
src/format/specifier/: actual.rs  alignment.rs  mod.rs  specifier.rs
src/format/variable/: actual.rs  mod.rs  variable.rs
todo/: backref-target-language.md
